MVVM with data bindings

--- a/app/src/main/res/layout/item_events_list.xml
+++ b/app/src/main/res/layout/item_events_list.xml
@@ -34,30 +34,35 @@
                 android:layout_height="?android:attr/listPreferredItemHeight"
                 android:contentDescription="@string/this_is_the_event_photo"
                 app:layout_constraintLeft_toLeftOf="parent"
+                android:src="@drawable/ic_course_logo_background"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tittle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="268dp"
+                android:layout_height="21dp"
                 android:maxLines="1"
                 android:text="@{Event.getTittle()}"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/photo"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/description"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="269dp"
+                android:layout_height="17dp"
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@{Event.getDescription()}"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/photo"
-                app:layout_constraintTop_toBottomOf="@id/tittle" />
+                app:layout_constraintTop_toBottomOf="@+id/tittle"
+                app:layout_constraintVertical_bias="0.0" />
 
             <RatingBar
                 android:id="@+id/avaluation"
@@ -69,6 +74,16 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/photo"
                 app:layout_constraintTop_toBottomOf="@id/description" />
+
+            <ImageButton
+                android:id="@+id/imageButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/description"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@android:drawable/ic_menu_delete" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
