--- a/app/src/main/res/layout/activity_events_list.xml
+++ b/app/src/main/res/layout/activity_events_list.xml
@@ -12,20 +12,10 @@
         android:id="@+id/activityMainAtcEventUserId"
         android:layout_width="229dp"
         android:layout_height="44dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginLeft="120dp"
         android:hint="@string/event_user_id"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <Button
-        android:id="@+id/activityMainBtnSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:text="@string/search"
-        app:layout_constraintBottom_toTopOf="@+id/activityMainRcyMain"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.162"
-        app:layout_constraintStart_toEndOf="@+id/activityMainAtcEventUserId"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -65,16 +55,31 @@
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:text="@string/_new"
-        app:layout_constraintBottom_toTopOf="@+id/activityMainRcyMain"
+    <ImageButton
+        android:id="@+id/searchButton"
+        android:layout_width="47dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/activityMainAtcEventUserId"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toEndOf="@+id/activityMainBtnSearch"
-        app:layout_constraintTop_toTopOf="@+id/activityMainAtcEventUserId" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/activityMainAtcEventUserId"
+        app:layout_constraintTop_toBottomOf="@+id/screen_tittle"
+        app:layout_constraintVertical_bias="0.25"
+        app:srcCompat="@android:drawable/ic_search_category_default"
+        android:contentDescription="@string/search" />
+
+    <ImageButton
+        android:id="@+id/createButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/activityMainRcyMain"
+        app:layout_constraintEnd_toStartOf="@+id/activityMainAtcEventUserId"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/activityMainAtcEventUserId"
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:contentDescription="@string/_new" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
